# Calculate-Pi

./: CMakeLists.txt  README.md
include/: formulas.hpp
include/formulas/: chudnovsky.hpp  euler.hpp  leibniz.hpp  ramanujan.hpp  wallis.hpp
src/: main.cpp
src/formulas/: chudnovsky.cpp  euler.cpp  leibniz.cpp  ramanujan.cpp  wallis.cpp
